--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<div class="name jumbotron">
+<div class="name jumbotron container">
     <h1>Aaron D. Sawyer</h1>
 </div>
 <div class="contact">
@@ -44,12 +44,12 @@
     <h3>Professional Experience</h3>
     <hr>
 </div>
-<div>
+<div class="work-info">
     <h3 class="alignl">Delivery Driver/Server, Pizza Luce, Hopkins/Richfield, MN</h3>	                  <h3 class="alignr">2010-Current</h3><br><br>
-    <ul>
-        <li>Responsible for delivery of food, accurate order taking, and friendly customer service.</li>
+    <div class="luce-info">
+        <button class="luce">Info</button>
 
-    </ul>
+    </div>
     <h3 class="alignl">Sales and Training Specialist, HBSA, Eden Prairie, MN</h3>	           <h3 class="alignr">2010-2010</h3> <br><br>
     <ul>
         <li>Marketed and sold online marketing training packages</li>
@@ -94,6 +94,7 @@
         <li>Eagle Scout</li>
         <li>Energy Leadership</li>
         <li>Life Coach</li> <br><br><br>
+    </ul>
 </div>
 
 
