--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/assets/styles/stylesheet.css">
     <script type="text/javascript" src="/vendor/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/assets/scripts/app.js"></script>
 </head>
 
 <body>
