tests use of bootstrap containers

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -15,20 +15,20 @@
 <div class="name jumbotron container">
     <h1>Aaron D. Sawyer</h1>
 </div>
-<div class="contact">
+<div class="contact container">
     <p>5342 Woodland Rd. Minnetonka, MN 55345 <br> T: (952) 412-6490 <br>E: me@aarondevon.com
     </p>
     <hr>
 </div>
-<div class="intro">
+<div class="intro container">
     <p>Dynamic professional offering excellent work ethic, dedication to high performance, effective communication, and a focus on customer service and training that will contribute to the company’s growth and success. </p>
 </div>
-<div class="value_offered">
+<div class="value_offered container">
 
     <h3> Value Offered</h3>
     <hr>
 </div>
-<div>
+<div class="container">
     <ul>
         <li>Self-motivated with exceptional work ethic and time management skills</li>
         <li>Manage multiple tasks with changing scope and urgency</li>
@@ -41,11 +41,11 @@
 
     </ul>
 </div>
-<div class="professional">
+<div class="professional container">
     <h3>Professional Experience</h3>
     <hr>
 </div>
-<div class="work-info">
+<div class="work-info container">
     <h3 class="alignl">Delivery Driver/Server, Pizza Luce, Hopkins/Richfield, MN</h3>	                  <h3 class="alignr">2010-Current</h3><br><br>
     <div class="luce-info">
         <button class="luce">Info</button>
