Adds hover, addClass, and removeClass functionality to increase text size on li and p tags. Adds md document

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -13,7 +13,7 @@
 
 <body>
 <div class="name jumbotron container">
-    <h1>Aaron D. Sawyer</h1>
+    <h1 class="hover">Aaron D. Sawyer</h1>
 </div>
 <div class="contact container">
     <p>5342 Woodland Rd. Minnetonka, MN 55345 <br> T: (952) 412-6490 <br>E: me@aarondevon.com
@@ -48,7 +48,7 @@
 <div class="work-info container">
     <h3 class="alignl">Delivery Driver/Server, Pizza Luce, Hopkins/Richfield, MN</h3>	                  <h3 class="alignr">2010-Current</h3><br><br>
     <div class="luce-info">
-        <button class="luce">Info</button>
+
 
     </div>
     <h3 class="alignl">Sales and Training Specialist, HBSA, Eden Prairie, MN</h3>	           <h3 class="alignr">2010-2010</h3> <br><br>
@@ -68,10 +68,10 @@
         <li>Created win-win solutions</li></ul>
 </div>
 
-<div class="education">
+<div class="education container">
     <h3>Education</h3>
     <hr></div>
-<div>
+<div class="container">
     <h3 class="alignl">Columbia College</h3>        <h3 class="alignr">2013-Current</h3> <br><br>
     <p class="margin">
         Information Systems GPA 4.0</p>
@@ -83,12 +83,12 @@
 
     <h3 class="alignl">TiNTiC</h3>
     <h3 class="alignr">2014-Current</h3> <br><br>
-    <p class="margin">The role of Technology Intern is to assist in the administration and development of the technology infrastructure. The Technology Intern will monitor existing technology and deploy new technology in an effort to reduce costs, improve efficiencies, and generate revenue.</p>
+    <div><p class="margin">The role of Technology Intern is to assist in the administration and development of the technology infrastructure. The Technology Intern will monitor existing technology and deploy new technology in an effort to reduce costs, improve efficiencies, and generate revenue.</p></div>
 
 
 </div>
 
-<div class="awards">
+<div class="awards container">
     <h3>Awards and Certifications</h3> <hr>
 
     <ul>
