--- a/server/public/assets/styles/stylesheet.css
+++ b/server/public/assets/styles/stylesheet.css
@@ -3,10 +3,7 @@ General
 **********/
 
 body {
-    background-image:url(../img/texturegray.jpg);
-    opacity:30%}
-{
-    font-family: 'Open Sans', sans-serif;
+    background-color: #E7E8CD;
 }
 
 
@@ -14,9 +11,13 @@ body {
 /**********
 Heading
 **********/
+.jumbotron {
+    background-color: #B0CCE8;
+    border-radius: 25px;
+}
 
 .name {
-    color: #3B91D4;
+
     text-align:center;
     font-size:22px;
     font-family: 'Lato' , sans-serif;
@@ -25,6 +26,7 @@ Heading
 .contact {
     text-align:center;
     font-size:20px;
+    color: #86CDFF;
 }
 .contact hr{
     height: 2px;
@@ -49,7 +51,7 @@ h3 {
 }
 
 .value_offered h3 {
-    color: #3B91D4;
+    color: #FF6159;
     font-size:19px;
 
 
@@ -65,7 +67,7 @@ ul {
 }
 
 .professional h3 {
-    color: #3B91D4;
+    color: #FF6159;
     font-size:19px;
 }
 
@@ -85,7 +87,7 @@ ul {
 
 
 .education h3 {
-    color: #3B91D4;
+    color: #FF6159;
     font-size:19px;
 }
 
@@ -96,7 +98,7 @@ ul {
 }
 
 .awards h3 {
-    color: #3B91D4;
+    color: #FF6159;
     font-size:19px;
 }
 
@@ -107,4 +109,8 @@ ul {
 }
 .bigger {
     font-size: 20px;
+}
+
+.right {
+    margin-left: 20px;
 }
