--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -46,20 +46,20 @@
     <hr>
 </div>
 <div class="work-info container">
-    <h3 class="alignl">Delivery Driver/Server, Pizza Luce, Hopkins/Richfield, MN</h3>	                  <h3 class="alignr">2010-Current</h3><br><br>
+    <h3 class="col-md-9 text-left">Delivery Driver/Server, Pizza Luce, Hopkins/Richfield, MN</h3>	                  <h3 class="col-md-3 text-right">2010-Current</h3>
     <div class="luce-info">
 
 
     </div>
-    <h3 class="alignl">Sales and Training Specialist, HBSA, Eden Prairie, MN</h3>	           <h3 class="alignr">2010-2010</h3> <br><br>
-    <ul>
+    <h3 class="col-md-7">Sales and Training Specialist, HBSA, Eden Prairie, MN</h3>	           <h3 class="col-md-5 text-right">2010-2010</h3> <br><br>
+    <ul class="col-md-12 right">
         <li>Marketed and sold online marketing training packages</li>
         <li>Worked with clients one-on-one and trained them in online marketing</li>
         <li>Handled customer complaints in a timely and effective manner via phone, chat, and email</li>
         <li>Created win-win solutions</li></ul>
 
-    <h3 class="alignl">Manager, Papa Johns, Minnetonka, MN</h3>	                                             <h3 class="alignr">2005-2010</h3> <br><br>
-    <ul>
+    <h3 class="col-md-7">Manager, Papa Johns, Minnetonka, MN</h3>	                                             <h3 class="col-md-5 text-right">2005-2010</h3> <br><br>
+    <ul class="col-md-12 right">
         <li>Performed managerial duties</li>
         <li>Trained team members</li>
         <li>Created work schedules</li>
@@ -72,18 +72,18 @@
     <h3>Education</h3>
     <hr></div>
 <div class="container">
-    <h3 class="alignl">Columbia College</h3>        <h3 class="alignr">2013-Current</h3> <br><br>
-    <p class="margin">
+    <h3 class="col-md-7">Columbia College</h3>        <h3 class="col-md-5 text-right">2013-Current</h3> <br><br>
+    <p class="right">
         Information Systems GPA 4.0</p>
 
 
-    <h3 class="alignl">Hennepin Technical College</h3>
-    <h3 class="alignr">2011-2012</h3> <br><br>
-    <p class="margin">Accounting/Photography GPA 4.0</p>
+    <h3 class="col-md-7">Hennepin Technical College</h3>
+    <h3 class="col-md-5 text-right">2011-2012</h3> <br><br>
+    <p class="right">Accounting/Photography GPA 4.0</p>
 
-    <h3 class="alignl">TiNTiC</h3>
-    <h3 class="alignr">2014-Current</h3> <br><br>
-    <div><p class="margin">The role of Technology Intern is to assist in the administration and development of the technology infrastructure. The Technology Intern will monitor existing technology and deploy new technology in an effort to reduce costs, improve efficiencies, and generate revenue.</p></div>
+    <h3 class="col-md-7">TiNTiC</h3>
+    <h3 class="col-md-5 text-right">2014-Current</h3> <br><br>
+    <div><p class="right">The role of Technology Intern is to assist in the administration and development of the technology infrastructure. The Technology Intern will monitor existing technology and deploy new technology in an effort to reduce costs, improve efficiencies, and generate revenue.</p></div>
 
 
 </div>
