Adds teplate html file and ajax call

--- a/server/public/assets/styles/stylesheet.css
+++ b/server/public/assets/styles/stylesheet.css
@@ -28,7 +28,7 @@ Heading
     font-size:20px;
     color: #86CDFF;
 }
-.contact hr{
+.intro hr{
     height: 2px;
     color: #000;
     background-color: #000;
