--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -16,11 +16,11 @@
     <h1 class="hover">Aaron D. Sawyer</h1>
 </div>
 <div class="contact container">
-    <p>5342 Woodland Rd. Minnetonka, MN 55345 <br> T: (952) 412-6490 <br>E: me@aarondevon.com
-    </p>
-    <hr>
+
+
 </div>
 <div class="intro container">
+    <hr>
     <p>Dynamic professional offering excellent work ethic, dedication to high performance, effective communication, and a focus on customer service and training that will contribute to the company’s growth and success. </p>
 </div>
 <div class="value_offered container">
@@ -69,9 +69,9 @@
 </div>
 
 <div class="education container">
-    <h3>Education</h3>
+    <h3>Education <button class="btn btn-med">Schools</button></h3>
     <hr></div>
-<div class="container">
+<div class="container school-info">
     <h3 class="col-md-7">Columbia College</h3>        <h3 class="col-md-5 text-right">2013-Current</h3> <br><br>
     <p class="right">
         Information Systems GPA 4.0</p>
