Adds data.json info and tries to call it

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -96,7 +96,12 @@
         <li>Energy Leadership</li>
         <li>Life Coach</li> <br><br><br>
     </ul>
+    <hr>
+    <div class="footer text-center">
+
+    </div>
 </div>
+
 
 
 
